--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -2,10 +2,10 @@
 
 {% block body %}
 
+    <h2>Our climate stories safe holds <b>{{ total[1]|join('stories') }}</b></h2>
 {{ include('storyCard.html.twig') }}
 
 {% endblock %}
 {% block javascripts %}
-    {{ parent() }}
-    <script src="{{ asset('vueJs/ux.js') }}"></script>
+
 {% endblock %}
