[add] create search form

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <h2>Our climate stories safe holds <b>{{ total[1]|join('stories') }}</b></h2>
+    <h2 class="storyCount">Our climate stories safe holds <b>{{ total[1] }} stories</b></h2>
 {{ include('storyCard.html.twig') }}
 
 {% endblock %}
