--- a/public/css/unitedStyle.css
+++ b/public/css/unitedStyle.css
@@ -111,16 +111,34 @@ footer
 
 /*------- form --------*/
 
-#addForm
+#addForm,
+.connectionForm
 {
     width:50%;
     margin-left: 25%;
 }
 
-.connectionForm
+#filter .form-group:nth-child(2)
 {
-    width: 50%;
     margin-left: 25%;
+}
+
+#filter .form-group:nth-child(1)
+{
+    margin-left: 5%
+}
+
+#filter .form-group:nth-child(3)
+{
+    margin-left: 15%
+}
+
+#filter
+{
+    margin-bottom: 5%;
+    background-color: #c3c3c3;
+    height: 100px;
+    padding-top: 2%;
 }
 
 /*------- story card --------*/
@@ -242,4 +260,15 @@ footer
 #pageLinks
 {
     color:  #0f74a8;
+}
+
+/*------- home --------*/
+
+.storyCount
+{
+    text-align: center;
+    margin-bottom: 5%;
+    margin-top: 5%;
+    font-size: 2em;
+    padding: 0;
 }
