--- a/templates/connectionForms.html.twig
+++ b/templates/connectionForms.html.twig
@@ -21,7 +21,7 @@
                     <input type="checkbox" id="remember_me" name="_remember_me" checked />
                     <label for="remember_me">Se souvenir de moi</label>
                 </div>
-                <div class="form-group">
+                <div class="form-group row">
                     <button class="btn btn-success" type="submit">Valider</button>
                     <a class="btn btn-default" href="{{ path('lostPassword') }}">Mot de passe oublié</a>
                 </div>
