--- a/templates/pagination.html.twig
+++ b/templates/pagination.html.twig
@@ -1,8 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1 class="storyCount">Our climate stories safe holds <b>{{ stories|length }} stories</b></h1>
-
+    {% if title == 'countTotal' %}
+        <h1 class="storyCount">Our climate stories safe holds <b>{{ stories|length }} stories</b></h1>
+    {% endif %}
+    {% if title == 'countResult' %}
+        <h1 class="storyCount"><b>{{ stories|length }} stories</b> found</h1>
+    {% endif %}
     <div id="filter">
         {{ form_start(filter,{'attr':{'class':'form-inline'}}) }}
         <div class="form-group ">
@@ -16,6 +20,7 @@
         </div>
         <div class="form-group">
             <button class="btn btn-success" type="submit">search</button>
+            <a class="btn btn-warning" href="{{ path('browse',{'pageNumber': 1})}}"> reset filter</a>
         </div>
         {{ form_end(filter) }}
     </div>
