--- a/public/css/unitedStyle.css
+++ b/public/css/unitedStyle.css
@@ -118,19 +118,15 @@ footer
     margin-left: 25%;
 }
 
-#filter .form-group:nth-child(2)
+#filter .form-inline
 {
-    margin-left: 25%;
+    padding-bottom: 10%;
+    padding-left: 10%;
 }
 
-#filter .form-group:nth-child(1)
+#filter .form-group
 {
-    margin-left: 5%
-}
-
-#filter .form-group:nth-child(3)
-{
-    margin-left: 15%
+    padding: 3%;
 }
 
 #filter
