--- a/templates/pagination.html.twig
+++ b/templates/pagination.html.twig
@@ -1,12 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    {% if title == 'countTotal' %}
-        <h1 class="storyCount">Our climate stories safe holds <b>{{ stories|length }} stories</b></h1>
-    {% endif %}
-    {% if title == 'countResult' %}
-        <h1 class="storyCount"><b>{{ stories|length }} stories</b> found</h1>
-    {% endif %}
+
+    <div>
+        <h1 class="storyCount">{{ title }} stories</h1>
+    </div>
+
     <div id="filter">
         {{ form_start(filter,{'attr':{'class':'form-inline'}, 'action': path('browse', {'pageNumber' : 1})}) }}
         <div class="form-group ">
@@ -23,32 +22,34 @@
         </div>
         {{ form_end(filter) }}
     </div>
+   {% if stories|length != 0 %}
 
-    {{ include('storyCard.html.twig') }}
+        {{ include('storyCard.html.twig') }}
 
-    {% if pageNumber > 1 %}
-    <div id="previous">
-        <a class="pull-left btn btn-primary" href="{{ path('browse',{'pageNumber': pageNumber - 1}) }}">
-            <i class="fa fa-chevron-left" aria-hidden="true"></i>
-        </a>
-    </div>
-    {% endif %}
+        {% if pageNumber > 1 %}
+        <div id="previous">
+            <a class="pull-left btn btn-primary" href="{{ path('browse',{'pageNumber': pageNumber - 1}) }}">
+                <i class="fa fa-chevron-left" aria-hidden="true"></i>
+            </a>
+        </div>
+        {% endif %}
 
-    {% if totalPage > 1 and pageNumber < totalPage %}
-    <div id="nextPrevious">
-        <a class="pull-right btn btn-primary" href="{{ path('browse',{'pageNumber': pageNumber + 1}) }}">
-            <i class="fa fa-chevron-right" aria-hidden="true"></i>
-        </a>
-    </div>
-    {% endif %}
+        {% if totalPage > 1 and pageNumber < totalPage %}
+        <div id="nextPrevious">
+            <a class="pull-right btn btn-primary" href="{{ path('browse',{'pageNumber': pageNumber + 1}) }}">
+                <i class="fa fa-chevron-right" aria-hidden="true"></i>
+            </a>
+        </div>
+        {% endif %}
 
-    <div id="pageLinks" class="text-center">
-        <ul class="list-inline">
-            {% for i in 1..totalPage %}
-                <li class="list-inline-item" {{ pageNumber == i ? 'id="currentPage"' }}>
-                    <a href="{{ path('browse',{'pageNumber': i}) }}">{{ i }}</a>
-                </li>
-            {% endfor %}
-        </ul>
-    </div>
+        <div id="pageLinks" class="text-center">
+            <ul class="list-inline">
+                {% for i in 1..totalPage %}
+                    <li class="list-inline-item" {{ pageNumber == i ? 'id="currentPage"' }}>
+                        <a href="{{ path('browse',{'pageNumber': i}) }}">{{ i }}</a>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+   {% endif %}
 {% endblock %}
