--- a/templates/pagination.html.twig
+++ b/templates/pagination.html.twig
@@ -20,6 +20,9 @@
         <div class="form-group">
             <button class="btn btn-success" type="submit">search</button>
         </div>
+        <div>
+            <a class="btn" href="{{ path('browse', {'pageNumber':1})}}">reset filters</a>
+        </div>
         {{ form_end(filter) }}
     </div>
    {% if stories|length != 0 %}
