[minor]Turn some forgotten labels... from french to english

--- a/templates/addStory.html.twig
+++ b/templates/addStory.html.twig
@@ -67,7 +67,7 @@
             <a href="#" id="add_url" class="btn btn-default">add a link</a>
         </div>
         <div class="form-group row">
-            <button class="btn btn-success" type="submit">Valider</button>
+            <button class="btn btn-success" type="submit">Submit</button>
         </div>
         {{ form_end(form) }}
     </div>
