--- a/templates/connectionForms.html.twig
+++ b/templates/connectionForms.html.twig
@@ -14,15 +14,15 @@
                     <input class="form-control" type="text" id="username" name="_username" value="{{ last_username }}"/>
                 </div>
                 <div class="form-group row">
-                    <label for="password">Mot de passe</label>
+                    <label for="password">Password</label>
                     <input class="form-control" type="password" id="password" name="_password"/>
                 </div>
                 <div class="form-group row">
                     <input type="checkbox" id="remember_me" name="_remember_me" checked />
-                    <label for="remember_me">Se souvenir de moi</label>
+                    <label for="remember_me">Remember Me</label>
                 </div>
                 <div class="form-group row">
-                    <button class="btn btn-success" type="submit">Valider</button>
+                    <button class="btn btn-success" type="submit">Submit</button>
                     <a class="btn btn-default" href="{{ path('lostPassword') }}">Mot de passe oublié</a>
                 </div>
             </form>
@@ -63,7 +63,7 @@
             {{ form_errors(form.termsAgreement)}}
         </div>
         <div class="form-group row">
-            <button class="btn btn-success" type="submit">Envoyer</button>
+            <button class="btn btn-success" type="submit">Submit</button>
         </div>
         {{ form_end(form) }}
         </div>
@@ -78,7 +78,7 @@
                 {{ form_errors(form.email) }}
             </div>
             <div class="form-group">
-                <button class="btn btn-success" type="submit">Valider</button>
+                <button class="btn btn-success" type="submit">Submit</button>
             </div>
             {{ form_end(form) }}
         </div>
@@ -98,7 +98,7 @@
                 {{ form_errors(form.confirmPswd) }}
             </div>
             <div class="form-group">
-                <button class="btn btn-success" type="submit">Valider</button>
+                <button class="btn btn-success" type="submit">Submit</button>
             </div>
             {{ form_end(form) }}
         </div>
