--- a/templates/addStory.html.twig
+++ b/templates/addStory.html.twig
@@ -75,53 +75,8 @@
 {% endblock %}
 
 {% block javascripts %}
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript">
-
-        $(document).ready(function() {
-            var $container = $('#story_urls');
-            var index = $container.find(':input').length;
-
-            $('#add_url').click(function(e) {
-
-                addUrl($container);
-                e.preventDefault();
-                return false;
-            });
-            if (index == 0) {
-
-                addUrl($container);
-
-            } else {
-                $container.children('div').each(function() {
-                    addDeleteLink($(this));
-                });
-
-            }
-            function addUrl($container) {
-                var template = $container.attr('data-prototype')
-                        .replace(/__name__label__/g, 'link n°' + (index+1))
-                        .replace(/__name__/g,        index)
-                    ;
-
-                var $prototype = $(template);
-                addDeleteLink($prototype);
-                $container.append($prototype);
-                index++;
-            }
-
-            function addDeleteLink($prototype) {
-                var $deleteLink = $('<a href="#" class="btn btn-danger">Supprimer</a>');
-                $prototype.append($deleteLink);
-                $deleteLink.click(function(e) {
-                    $prototype.remove();
-                    e.preventDefault();
-                    return false;
-                });
-            }
-        });
-    </script>
-
+      {{ parent() }}
+    <script src="{{ asset('js/collectionForm.js') }}"></script>
 {% endblock %}
 
 
