--- a/templates/connectionForms.html.twig
+++ b/templates/connectionForms.html.twig
@@ -16,14 +16,15 @@
                 <div class="form-group row">
                     <label for="password">Password</label>
                     <input class="form-control" type="password" id="password" name="_password"/>
+                    <span id="invalid_pswd" style="display: none">Pasword doesn't match prerequisite pattern</span>
                 </div>
                 <div class="form-group row">
                     <input type="checkbox" id="remember_me" name="_remember_me" checked />
                     <label for="remember_me">Remember Me</label>
                 </div>
                 <div class="form-group row">
-                    <button class="btn btn-success" type="submit">Submit</button>
-                    <a class="btn btn-default" href="{{ path('lostPassword') }}">Mot de passe oublié</a>
+                    <button class="btn btn-success" id="loginBtn" type="submit">Submit</button>
+                    <a class="btn btn-default" href="{{ path('lostPassword') }}">Lost Password</a>
                 </div>
             </form>
         </div>
@@ -36,11 +37,25 @@
             {{ form_label(form.name) }}
             {{ form_widget(form.name ,{'attr':{'class':'form-control'}}) }}
             {{ form_errors(form.name) }}
+            <span class="invalid_sign" id="invalid_name_icon" style="display: none">
+                <i class="fa fa-times" aria-hidden="true"></i>
+            </span>
+            <span class="valid_sign" id="valid_name_icon" style="display: none">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </span>
+            <span class="invalid" id="invalid_name" style="display: none">Between 3 up to 30 letters</span>
         </div>
         <div class="form-group row">
             {{ form_label(form.surname) }}
             {{ form_widget(form.surname ,{'attr':{'class':'form-control'}}) }}
             {{ form_errors(form.surname) }}
+            <span class="invalid_sign" id="invalid_surname_icon" style="display: none">
+                <i class="fa fa-times" aria-hidden="true"></i>
+            </span>
+            <span class="valid_sign" id="valid_surname_icon" style="display: none">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </span>
+            <span class="invalid" id="invalid_surname" style="display: none">Between 3 up to 30 letters</span>
         </div>
         <div class="form-group row">
             {{ form_label(form.email) }}
@@ -51,19 +66,33 @@
             {{ form_label(form.pswd) }}
             {{ form_widget(form.pswd ,{'attr':{'class':'form-control'}}) }}
             {{ form_errors(form.pswd) }}
+            <span class="invalid_sign" id="invalid_pswd_icon" style="display: none">
+                <i class="fa fa-times" aria-hidden="true"></i>
+            </span>
+            <span class="valid_sign" id="valid_pswd_icon" style="display: none">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </span>
+            <span class="invalid" id="invalid_pswd" style="display: none">Between 6 up to 30 letters</span>
         </div>
         <div class="form-group row">
             {{ form_label(form.confirmPswd) }}
             {{ form_widget(form.confirmPswd ,{'attr':{'class':'form-control'}})}}
             {{ form_errors(form.confirmPswd) }}
+            <span class="invalid_sign" id="invalid_confirm_icon" style="display: none">
+                <i class="fa fa-times" aria-hidden="true"></i>
+            </span>
+            <span class="valid_sign" id="valid_confirm_icon" style="display: none">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </span>
+            <span class="invalid" id="invalid_confirm" style="display: none">Password doesn't match</span>
         </div>
         <div class="form-group row">
             {{ form_label(form.termsAgreement) }}
-            {{ form_widget(form.termsAgreement ,{'attr':{'class':'form-control'}})}}
+            {{ form_widget(form.termsAgreement)}}
             {{ form_errors(form.termsAgreement)}}
         </div>
         <div class="form-group row">
-            <button class="btn btn-success" type="submit">Submit</button>
+            <button class="btn btn-success" id="registerBtn" type="submit">Submit</button>
         </div>
         {{ form_end(form) }}
         </div>
@@ -103,7 +132,9 @@
             {{ form_end(form) }}
         </div>
     {% endif %}
+{% endblock %}
 
-
-
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset('js/main.js') }}"></script>
 {% endblock %}
