--- a/templates/connectionForms.html.twig
+++ b/templates/connectionForms.html.twig
@@ -1,8 +1,6 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-
-
       {% if app.request.get('_route') == 'login' %}
         <div class="connectionForm">
         {% if error %}
@@ -91,7 +89,7 @@
                 <span class="valid_sign" id="valid_confirm_icon" style="display: none">
                     <i class="fa fa-check" aria-hidden="true"></i>
                 </span>
-                <span class="invalid" id="invalid_confirm" style="display: none">Password doesn't match</span>
+                <span class="invalid" id="invalid_confirm" style="display: none">Passwords don't match</span>
             </div>
             <div class="form-group row">
                 {{ form_label(form.termsAgreement) }}
@@ -111,7 +109,7 @@
             <div class="form-group row">
                 {{ form_label(form.email) }}
                 {{ form_widget(form.email ,{'attr':{'class':'form-control'}}) }}
-                {{ form_errors(form.email) }}
+                {{ form_errors(form.email ,{'attr':{'class':'invalid'}}) }}
                 <span class="invalid_sign" id="invalid_email_icon" style="display: none">
                     <i class="fa fa-times" aria-hidden="true"></i>
                 </span>
@@ -128,20 +126,34 @@
      {% endif %}
 
     {%if app.request.attributes.get('_route') == 'resetPswd' %}
-        <div>
+        <div class="connectionForm">
             {{ form_start(form)}}
             <div class="form-group row">
                 {{ form_label(form.pswd) }}
                 {{ form_widget(form.pswd ,{'attr':{'class':'form-control'}}) }}
                 {{ form_errors(form.pswd) }}
+                <span class="invalid_sign" id="invalid_pswd_icon" style="display: none">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                </span>
+                <span class="valid_sign" id="valid_pswd_icon" style="display: none">
+                    <i class="fa fa-check" aria-hidden="true"></i>
+                </span>
+                <span class="invalid" id="invalid_pswd" style="display: none">Between 6 up to 30 letters</span>
             </div>
             <div class="form-group row">
                 {{ form_label(form.confirmPswd) }}
                 {{ form_widget(form.confirmPswd ,{'attr':{'class':'form-control'}}) }}
-                {{ form_errors(form.confirmPswd) }}
+                {{ form_errors(form.confirmPswd, {'attr':{'class':'invalid'}}) }}
+                <span class="invalid_sign" id="invalid_confirm_icon" style="display: none">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                </span>
+                <span class="valid_sign" id="valid_confirm_icon" style="display: none">
+                    <i class="fa fa-check" aria-hidden="true"></i>
+                </span>
+                <span class="invalid" id="invalid_confirm" style="display: none">Passwords don't match</span>
             </div>
             <div class="form-group">
-                <button class="btn btn-success" type="submit">Submit</button>
+                <button class="btn btn-success" id="newPswdBtn" type="submit">Submit</button>
             </div>
             {{ form_end(form) }}
         </div>
