--- a/templates/addStory.html.twig
+++ b/templates/addStory.html.twig
@@ -26,6 +26,13 @@
             {{ form_label(form.investor) }}
             {{ form_widget(form.investor,{'attr':{'class':'form-control'}}) }}
             {{ form_errors(form.investor) }}
+            <span class="invalid_sign" id="invalid_investor_icon" style="display: none">
+                <i class="fa fa-times" aria-hidden="true"></i>
+            </span>
+            <span class="valid_sign" id="valid_investor_icon" style="display: none">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </span>
+            <span class="invalid" id="invalid_investor" style="display: none">Between 2 up to 100 characters</span>
         </div>
         <div class="form-group row">
             {{ form_label(form.year) }}
@@ -36,6 +43,13 @@
             {{ form_label(form.title) }}
             {{ form_widget(form.title ,{'attr':{'class':'form-control'}}) }}
             {{ form_errors(form.title) }}
+            <span class="invalid_sign" id="invalid_title_icon" style="display: none">
+                <i class="fa fa-times" aria-hidden="true"></i>
+            </span>
+            <span class="valid_sign" id="valid_title_icon" style="display: none">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </span>
+            <span class="invalid" id="invalid_title" style="display: none">Between 3 up to 100 characters</span>
         </div>
         <div class="form-group row">
             {{ form_label(form.abstract) }}
@@ -51,23 +65,44 @@
             {{ form_label(form.contactEmail) }}
             {{ form_widget(form.contactEmail ,{'attr':{'class':'form-control'}}) }}
             {{ form_errors(form.contactEmail) }}
+            <span class="invalid_sign" id="invalid_email_icon" style="display: none">
+                <i class="fa fa-times" aria-hidden="true"></i>
+            </span>
+            <span class="valid_sign" id="valid_email_icon" style="display: none">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </span>
+            <span class="invalid" id="invalid_email" style="display: none">Enter a valid email</span>
         </div>
         <div class="form-group row">
             {{ form_label(form.contactPlace) }}
             {{ form_widget(form.contactPlace ,{'attr':{'class':'form-control'}}) }}
             {{ form_errors(form.contactPlace) }}
+            <span class="invalid_sign" id="invalid_place_icon" style="display: none">
+                <i class="fa fa-times" aria-hidden="true"></i>
+            </span>
+            <span class="valid_sign" id="valid_place_icon" style="display: none">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </span>
+            <span class="invalid" id="invalid_place" style="display: none">Between 3 up to 100 characters</span>
         </div>
         <div class="form-group row">
             {{ form_label(form.contactPhone) }}
             {{ form_widget(form.contactPhone ,{'attr':{'class':'form-control'}}) }}
             {{ form_errors(form.contactPhone) }}
+            <span class="invalid_sign" id="invalid_phone_icon" style="display: none">
+                <i class="fa fa-times" aria-hidden="true"></i>
+            </span>
+            <span class="valid_sign" id="valid_phone_icon" style="display: none">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </span>
+            <span class="invalid" id="invalid_phone" style="display: none">Please enter a valid phone number, you can enter phone number with or without international prefix</span>
         </div>
         <div class="form-group row">
             {{ form_row(form.urls) }}
             <a href="#" id="add_url" class="btn btn-default">add a link</a>
         </div>
         <div class="form-group row">
-            <button class="btn btn-success" type="submit">Submit</button>
+            <button class="btn btn-success" id="addStoryBtn" type="submit">Submit</button>
         </div>
         {{ form_end(form) }}
     </div>
@@ -77,6 +112,7 @@
 {% block javascripts %}
       {{ parent() }}
     <script src="{{ asset('js/collectionForm.js') }}"></script>
+    <script src="{{ asset('js/main.js') }}"></script>
 {% endblock %}
 
 
