--- a/templates/addStory.html.twig
+++ b/templates/addStory.html.twig
@@ -51,15 +51,29 @@
             </span>
             <span class="invalid" id="invalid_title" style="display: none">Between 3 up to 100 characters</span>
         </div>
-        <div class="form-group row">
+        <div class="form-group row" id="abstract">
             {{ form_label(form.abstract) }}
             {{ form_widget(form.abstract ,{'attr':{'class':'form-control'}}) }}
             {{ form_errors(form.abstract) }}
+            <span class="invalid_sign" id="invalid_abstract_icon" style="display: none">
+                <i class="fa fa-times" aria-hidden="true"></i>
+            </span>
+            <span class="valid_sign" id="valid_abstract_icon" style="display: none">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </span>
+            <span class="invalid" id="invalid_abstract" style="display: none">70 words maximum</span>
         </div>
-        <div class="form-group row">
+        <div class="form-group row" id="plot">
             {{ form_label(form.plot) }}
             {{ form_widget(form.plot ,{'attr':{'class':'form-control'}}) }}
             {{ form_errors(form.plot) }}
+            <span class="invalid_sign" id="invalid_plot_icon" style="display: none">
+                <i class="fa fa-times" aria-hidden="true"></i>
+            </span>
+            <span class="valid_sign" id="valid_plot_icon" style="display: none">
+                <i class="fa fa-check" aria-hidden="true"></i>
+            </span>
+            <span class="invalid" id="invalid_plot" style="display: none">200 words maximum</span>
         </div>
         <div class="form-group row">
             {{ form_label(form.contactEmail) }}
@@ -103,6 +117,7 @@
         </div>
         <div class="form-group row">
             <button class="btn btn-success" id="addStoryBtn" type="submit">Submit</button>
+            <input id="userMail" type="hidden" value="{{ app.user.email }}">
         </div>
         {{ form_end(form) }}
     </div>
