--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,8 +6,12 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <script src="https://use.fontawesome.com/707b54fdb6.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>
-        <script>tinymce.init({ selector:'textarea' });</script>
+        <script src="https://cloud.tinymce.com/stable/tinymce.min.js?apiKey=fps3y9l4erw7zgwdffjno3ppzxkfzl8rxb9u4kndv95djvwx"></script>
+        <script>tinymce.init({
+            selector:'textarea',
+            plugins: 'wordcount',
+            toolbar: 'insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | print preview  fullpage | forecolor  emoticons'
+        });</script>
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
         {% block stylesheets %}
             <link href="{{ asset("css/unitedStyle.css") }}" rel="stylesheet">
