--- a/templates/addStory.html.twig
+++ b/templates/addStory.html.twig
@@ -10,22 +10,22 @@
         <div class="form-group row">
             {{ form_label(form.topic) }}
             {{ form_widget(form.topic ,{'attr':{'class':'form-control'}}) }}
-            {{ form_errors(form.topic) }}
+            <span class="invalidBack">{{ form_errors(form.topic) }}</span>
         </div>
         <div class="form-group row">
             {{ form_label(form.country) }}
             {{ form_widget(form.country ,{'attr':{'class':'form-control'}}) }}
-            {{ form_errors(form.country) }}
+            <span class="invalidBack">{{ form_errors(form.country) }}</span>
         </div>
         <div class="form-group row">
             {{ form_label(form.patronage) }}
             {{ form_widget(form.patronage,{'attr':{'class':'form-control'}}) }}
-            {{ form_errors(form.patronage) }}
+            <span class="invalidBack">{{ form_errors(form.patronage) }}</span>
         </div>
         <div class="form-group row">
             {{ form_label(form.investor) }}
             {{ form_widget(form.investor,{'attr':{'class':'form-control'}}) }}
-            {{ form_errors(form.investor) }}
+            <span class="invalidBack">{{ form_errors(form.investor) }}</span>
             <span class="invalid_sign" id="invalid_investor_icon" style="display: none">
                 <i class="fa fa-times" aria-hidden="true"></i>
             </span>
@@ -37,12 +37,12 @@
         <div class="form-group row">
             {{ form_label(form.year) }}
             {{ form_widget(form.year ,{'attr':{'class':'form-control'}}) }}
-            {{ form_errors(form.year) }}
+            <span class="invalidBack">{{ form_errors(form.year) }}</span>
         </div>
         <div class="form-group row">
             {{ form_label(form.title) }}
             {{ form_widget(form.title ,{'attr':{'class':'form-control'}}) }}
-            {{ form_errors(form.title) }}
+            <span class="invalidBack">{{ form_errors(form.title) }}</span>
             <span class="invalid_sign" id="invalid_title_icon" style="display: none">
                 <i class="fa fa-times" aria-hidden="true"></i>
             </span>
@@ -54,7 +54,7 @@
         <div class="form-group row" id="abstract">
             {{ form_label(form.abstract) }}
             {{ form_widget(form.abstract ,{'attr':{'class':'form-control'}}) }}
-            {{ form_errors(form.abstract) }}
+            <span class="invalidBack">{{ form_errors(form.abstract) }}</span>
             <span class="invalid_sign" id="invalid_abstract_icon" style="display: none">
                 <i class="fa fa-times" aria-hidden="true"></i>
             </span>
@@ -66,7 +66,7 @@
         <div class="form-group row" id="plot">
             {{ form_label(form.plot) }}
             {{ form_widget(form.plot ,{'attr':{'class':'form-control'}}) }}
-            {{ form_errors(form.plot) }}
+            <span class="invalidBack">{{ form_errors(form.plot) }}</span>
             <span class="invalid_sign" id="invalid_plot_icon" style="display: none">
                 <i class="fa fa-times" aria-hidden="true"></i>
             </span>
@@ -78,7 +78,7 @@
         <div class="form-group row">
             {{ form_label(form.contactEmail) }}
             {{ form_widget(form.contactEmail ,{'attr':{'class':'form-control'}}) }}
-            {{ form_errors(form.contactEmail) }}
+            <span class="invalidBack">{{ form_errors(form.contactEmail) }}</span>
             <span class="invalid_sign" id="invalid_email_icon" style="display: none">
                 <i class="fa fa-times" aria-hidden="true"></i>
             </span>
@@ -90,7 +90,7 @@
         <div class="form-group row">
             {{ form_label(form.contactPlace) }}
             {{ form_widget(form.contactPlace ,{'attr':{'class':'form-control'}}) }}
-            {{ form_errors(form.contactPlace) }}
+            <span class="invalidBack">{{ form_errors(form.contactPlace) }}</span>
             <span class="invalid_sign" id="invalid_place_icon" style="display: none">
                 <i class="fa fa-times" aria-hidden="true"></i>
             </span>
@@ -102,7 +102,7 @@
         <div class="form-group row">
             {{ form_label(form.contactPhone) }}
             {{ form_widget(form.contactPhone ,{'attr':{'class':'form-control'}}) }}
-            {{ form_errors(form.contactPhone) }}
+            <span class="invalidBack">{{ form_errors(form.contactPhone) }}
             <span class="invalid_sign" id="invalid_phone_icon" style="display: none">
                 <i class="fa fa-times" aria-hidden="true"></i>
             </span>
