[add]|[story] links to previous and next story

--- a/templates/story.html.twig
+++ b/templates/story.html.twig
@@ -123,6 +123,12 @@
             {% endfor %}
         </div>
         {% endif %}
+        {% if previous != null %}
+         <a class="btn" href="{{ path('story',{'storyId':previous|join('|')}) }}">Previous</a>
+        {% endif %}
+        {% if next != null %}
+            <a class="btn" href="{{ path('story',{'storyId':next|join('|')}) }}">Next</a>
+        {% endif %}
     </div>
 
 {% endblock %}
