--- a/templates/pagination.html.twig
+++ b/templates/pagination.html.twig
@@ -17,10 +17,10 @@
         <div class="form-group">
             {{ form_widget(filter.country ,{'attr':{'class':'form-control'}}) }}
         </div>
-        <div class="form-group">
+        <div class="form-group" id="filterBtn">
             <button class="btn btn-success" type="submit">search</button>
         </div>
-        <div>
+        <div class="form-group" id="resetBtn">
             <a class="btn" href="{{ path('browse', {'pageNumber':1})}}">reset filters</a>
         </div>
         {{ form_end(filter) }}
