[sass] translate code comments to English

--- a/public/sass/import/_atomes.scss
+++ b/public/sass/import/_atomes.scss
@@ -7,7 +7,7 @@
 /* ----------------------------- */
 
 
-/* -----COULEURS-----*/
+/* -----COLORS-----*/
 
 $primary-color: #ff3b1e;
 $primary-color-light: #000000;
@@ -19,13 +19,13 @@ $secondary-color-light: #000000;
 $secondary-color-dark: #000000;
 
 
-/* -----TYPOGRAPHIE-----*/
+/* -----FONT-----*/
 
 $primary-typo: 'Raleway', sans-serif;
 $secondary-typo: verdana,sans-serif;
 
 
-/* -----BOUTONS-----*/
+/* -----BUTTONS-----*/
 
 @mixin button-general {
    
