--- a/public/sass/import/_desktop.scss
+++ b/public/sass/import/_desktop.scss
@@ -2,7 +2,7 @@
 
 /* -------------------------------- */
 
-/* == _desktop.scss (grands écrans) */
+/* == _desktop.scss (large screen) */
 
 /* -------------------------------- */
 
@@ -12,4 +12,4 @@
         content: "Version Ordinateur";   
     }    
 }
-/* Fin de @media (max-width: 64.063em) /* = min-width 1025px */
+/* end of @media (max-width: 64.063em) /* = min-width 1025px */
