--- a/public/sass/import/_tablet.scss
+++ b/public/sass/import/_tablet.scss
@@ -2,7 +2,7 @@
 
 /* ----------------------------------------------------------------- */
 
-/* == _tablet.scss (des tablettes aux ordinateurs portables/laptops) */
+/* == _tablet.scss (target devices : tablets/laptop/desktop) */
 
 /* ----------------------------------------------------------------- */
 
