--- a/public/sass/import/_atomes.scss
+++ b/public/sass/import/_atomes.scss
@@ -18,6 +18,15 @@ $secondary-color: #000000;
 $secondary-color-light: #000000;
 $secondary-color-dark: #000000;
 
+$primary-color-card: #0f74a8;
+$primary-color-light-card: #FFFFFF;
+$primary-color-dark-card: #000000;
+
+$btn-backgrd-primary: #FFFFFF;
+$btn-backgrd-hover: #0f74a8;
+
+$shadow: 0px 5px 8px 0px rgba(0,0,0,0.75);;
+
 
 /* -----FONT-----*/
 
