[mod]|[html]|[css] Have to modify html and stylesheet as we moved from bootstrap 4 to 3.3.7 and css to sass

--- a/public/sass/import/_reset.scss
+++ b/public/sass/import/_reset.scss
@@ -20,10 +20,16 @@ body {
 	overflow-x:hidden;
 }
 
+.footer {
+    position:fixed;
+    bottom:0;
+}
+
 html,
 body {
     margin: 0;
     padding: 0;
+    height: 100%;
 }
 ul,
 ol {
@@ -47,7 +53,6 @@ svg:not(:root) {
 figure {
     margin: 0;
 }
-
 
 /* set all potentially problematics elements to maximum width */
 
